--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=assignment_3
 # PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=Sgirl123*
+spring.datasource.password=
 
 # Servlet
 server.servlet.contextPath=/api
